Issue SAMETINGET-199 Sametinget.dev: Fix "Change aliases" (Bytt aliaser): - Improve performance of replacing and removing aliases in import section